<resources>
    <string name="app_name">Tempus E Spatium</string>

    <string name="play">{fa_gamepad} PLAY!</string>
    <string name="rules">{fa_leanpub} Rules</string>
    <string name="learn">{fa_book} Learn</string>
    <string name="settings">{fa_cog} Settings</string>
    <string name="highscores">{fa_trophy} Highscores</string>
    <string name="quit">{fa_sign-out} Quit game</string>

    <string name="articles_covered">Articles covered: </string>
    <string name="learn_sub">Click on a badge above to revise now!</string>

    <string name="resume">{fa_play-circle} Resume</string>
    <string name="return_main_menu">{fa_sign-out} Return to main menu</string>
    <string name="topic_searcher_heading">Search for ANY topic!</string>
    <string name="loading">Loading, please wait…</string>

    <string name="highscores_enter_name">{md_sentiment_very_satisfied} Congrats, you won!\nEnter your name:</string>

    <!--<string name="dummy_button">Dummy Button</string>-->
    <!--<string name="dummy_content">DUMMY\nCONTENT</string>-->

    <string name="level">Level %d</string>
    <string name="rules_tirade">
        <p>The project is named Tempus E Spatium (Latin for Time and Space, which is often prefixed by “lost in”) as the questions focus on history and geography. Quiz types include: Drag and drop the national flags to the right continent, listen to the national anthem and choose the correct flag, and complete the word. Despite the name of the app, the last type can be of any question type.</p>
        <br /><p>The questions are timed five seconds each (three on hard difficulty). If a player did not answer in time, he will lose 5 points.</p>
    </string>

    <string name="pref_general">General</string>
    <string name="pref_general_locale">Locale</string>
    <string name="pref_version">Version</string>
    <string name="pref_player_1_theme">Player 1 Theme</string>
    <string name="pref_player_2_theme">Player 2 Theme</string>

    <string name="pref_gameplay">Gameplay</string>
    <string name="pref_difficulty">Difficulty</string>
    <string name="pref_difficulty_hard"><![CDATA[HARD<br /><small>30 seconds for fill in the blanks, 10 for other types
</small>]]></string>
    <string name="pref_difficulty_insane"><![CDATA[InSaNe<br /><small>20 seconds for fill in the blanks, 6 for other types</small>]]></string>
    <string name="pref_difficulty_hysterical"><![CDATA[hY5T3rIC41<br /><small>18 seconds for fill in the blanks, 5 for other types</small>]]></string>

    <string name="question_anagram">Reassemble the letters.</string>
    <string name="question_anthem">Which country does this anthem belong to?</string>
    <string name="question_flags">Choose the matching flag.</string>
    <string name="question_history">When did the historical event %s take place?</string>

    <string name="bar_points">Points: %d</string>
    <string name="submit">{fa_paper-plane} Submit!</string>
    <string name="reset">{fa_undo} Reset</string>
    <string name="a">A. </string>
    <string name="b">B. </string>
    <string name="c">C. </string>
    <string name="d">D. </string>

    <string name="paused">{fa_pause} Game paused</string>

    <!--<string name="reveal_anthem">The anthem is… %s\n%s</string>-->
    <!--<string name="anthem_cl">Hymne national du Chili</string>-->
    <!--<string name="anthem_de">Unité et droit et liberté</string>-->
    <!--<string name="anthem_fr">La Marseillaise</string>-->
    <!--<string name="anthem_es">Marche royale</string>-->
    <!--<string name="anthem_il">L\'Espoir</string>-->
    <!--<string name="anthem_in">Tu es le souverain de toutes les âmes</string>-->
    <!--<string name="anthem_jp">Votre règne</string>-->
    <!--<string name="anthem_kh">Majestueux Royaume</string>-->
    <!--<string name="anthem_pt">La Portugaise</string>-->
    <!--<string name="anthem_ua">Ni la gloire ni la liberté de l\'Ukraine ne sont mortes</string>-->

    <string name="simple_ime">Simple IME</string>
    <string name="subtype_en_US">English (US)</string>

    <string name="answer">Answer:</string>
    <string name="you_chose">You chose:</string>
    <string name="anthem_name">Anthem name:</string>

    <string name="learning_theme">Theme: </string>

    <string name="gameplay_language">Gameplay langauge: </string>
    <string name="any_topic">Any topic: </string>
    <string name="enter_keyword">Enter keyword to search for a theme!</string>
    <string name="date_game_options">\'Date game\' options: </string>
    <string name="multiple_choice_game_options">\'MC game\' options:</string>
    <string name="customise_here">{fa_check_square} Customise here (optional)</string>
    <string name="submit_and_play">{fa_gamepad} Submit and play!</string>
</resources>
