<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="680dp"
    android:layout_marginEnd="60dp"
    android:layout_marginStart="60dp"
    android:background="@drawable/dialog_shape_blue"
    android:orientation="vertical">

    <!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--android:id="@+id/rules_dialog_root"-->
    <!--style="@android:style/Animation.Dialog"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:background="@drawable/rounded_choice"-->
    <!--android:backgroundTint="@color/DarkOliveGreen"-->
    <!--android:orientation="vertical"-->
    <!--android:padding="20dp">-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--You can change the color by setting the BootstrapBrand to a custom implementation.-->
        <!--android:textColor="@android:color/white"-->
        <com.beardedhen.androidbootstrap.AwesomeTextView
            android:id="@+id/rules_caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:textSize="@dimen/bootstrap_h1_text_size"
            app:bootstrapBrand="secondary"
            app:bootstrapText="@string/paused" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/paused_resume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:bootstrapBrand="success"
            app:bootstrapText="@string/resume" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/paused_rules"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:bootstrapBrand="warning"
            app:bootstrapText="@string/rules" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/paused_quit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:textStyle="bold"
            app:bootstrapBrand="danger"
            app:bootstrapText="@string/quit" />

    </LinearLayout>

    <Button
        android:id="@+id/close"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:background="@drawable/ic_close_white_24dp"
        android:translationZ="10dp" />
    <!--</RelativeLayout>-->
</RelativeLayout>