<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <RelativeLayout
            android:id="@+id/aRelLayout"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_choice">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp"
                android:textStyle="bold"
                android:text="@string/a"/>
            <ImageView
                android:id="@+id/aImageView"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_centerInParent="true" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bRelLayout"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_choice">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp"
                android:textStyle="bold"
                android:text="@string/b"/>
            <ImageView
                android:id="@+id/bImageView"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_centerInParent="true" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <RelativeLayout
            android:id="@+id/cRelLayout"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_choice">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp"
                android:textStyle="bold"
                android:text="@string/c"/>
            <ImageView
                android:id="@+id/cImageView"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_centerInParent="true" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/dRelLayout"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_choice">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp"
                android:textStyle="bold"
                android:text="@string/d"/>
            <ImageView
                android:id="@+id/dImageView"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_centerInParent="true" />
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>