<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="hk.edu.cuhk.cse.tempusespatium.MenuActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <ImageView
        android:id="@+id/bg0"
        android:layout_width="790dp"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/tiled_background" />

    <ImageView
        android:id="@+id/bg1"
        android:layout_width="790dp"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/tiled_background" />

    <!--android:textColor="#33b5e5"-->
    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingBottom="110dp"
        android:keepScreenOn="true"
        android:text="@string/app_name"
        android:textColor="@color/AliceBlue"
        android:textSize="50sp"
        android:textStyle="bold"
        android:shadowColor="@color/Orchid"
        android:shadowRadius="20.5"/>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent" />
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/menuLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@color/AliceBlue" />

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/playButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:fontFamily="@font/baker_signet_bt"
                android:textStyle="bold|italic"
                app:bootstrapBrand="info"
                app:bootstrapSize="xl"
                app:bootstrapText="@string/play"
                app:buttonMode="regular"
                app:roundedCorners="true"
                app:showOutline="false" />

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/rulesButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:fontFamily="@font/baker_signet_bt"
                android:textStyle="italic"
                app:bootstrapBrand="warning"
                app:bootstrapSize="xl"
                app:bootstrapText="@string/rules"
                app:buttonMode="regular"
                app:roundedCorners="true"
                app:showOutline="false" />

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/settingsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:fontFamily="@font/baker_signet_bt"
                android:textStyle="italic"
                app:bootstrapBrand="regular"
                app:bootstrapSize="xl"
                app:bootstrapText="@string/settings"
                app:buttonMode="regular"
                app:roundedCorners="true"
                app:showOutline="false" />


            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/quitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:fontFamily="@font/baker_signet_bt"
                android:textStyle="italic"
                app:bootstrapBrand="danger"
                app:bootstrapSize="xl"
                app:bootstrapText="@string/quit"
                app:buttonMode="regular"
                app:roundedCorners="true"
                app:showOutline="false" />

        </LinearLayout>
    </RelativeLayout>

</FrameLayout>
