<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="2dp">

    <TextView
        android:id="@+id/questionHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:text="@string/question_history"
        android:textSize="@dimen/bootstrap_h5_text_size" />

    <ImageView
        android:id="@+id/questionHistoryPic"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:paddingBottom="5dp"
        app:srcCompat="@drawable/bayeux_tapestry" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:weightSum="3">

        <!--android:layout_marginStart="120dp"-->
        <com.shawnlin.numberpicker.NumberPicker
            android:id="@+id/year"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:background="@color/ForestGreen"
            app:np_dividerColor="@color/YellowGreen"
            app:np_max="1900"
            app:np_min="1700"
            app:np_selectedTextColor="@color/Platinum"
            app:np_selectedTextSize="@dimen/bootstrap_h3_text_size"
            app:np_textColor="@android:color/white"
            app:np_textSize="@dimen/bootstrap_h6_text_size"
            app:np_wheelItemCount="5" />

        <!--android:layout_marginEnd="120dp"-->
        <com.shawnlin.numberpicker.NumberPicker
            android:id="@+id/month"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="2"
            android:background="@color/AndroidGreen"
            app:np_dividerColor="@color/Honeydew"
            app:np_max="12"
            app:np_min="1"
            app:np_selectedTextColor="@color/Platinum"
            app:np_selectedTextSize="@dimen/bootstrap_h3_text_size"
            app:np_textColor="@android:color/white"
            app:np_textSize="@dimen/bootstrap_h6_text_size"
            app:np_wheelItemCount="3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingTop="10dp">

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/hist_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            app:bootstrapBrand="success"
            app:bootstrapText="@string/submit"
            app:roundedCorners="true" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/hist_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bootstrapBrand="danger"
            app:bootstrapText="@string/reset"
            app:roundedCorners="true" />
    </LinearLayout>
</LinearLayout>